manifests/base/resources/web-security/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-security
    chart: web-security-1.4.18
    heritage: Helm
    release: web-security
  name: web-security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-security
      release: web-security
  template:
    metadata:
      labels:
        app: web-security
        release: web-security
    spec:
      containers:
        - env:
            - name: MONGODB_URI
              valueFrom:
                secretKeyRef:
                  key: mongodbUri
                  name: web-security-secrets
            - name: MONGO_URI
              value: $(MONGODB_URI)
            - name: KEYS_URI
              valueFrom:
                configMapKeyRef:
                  key: keysUri
                  name: web-security-configs
            - name: AUTH_JWKS_URI
              value: $(KEYS_URI)/v1/keys/qlik.api.internal
            - name: NATS_STREAMING_CLUSTER_ID
              valueFrom:
                configMapKeyRef:
                  key: natsStreamingClusterId
                  name: web-security-configs
            - name: MESSAGING_STAN_CLUSTER_ID
              value: $(NATS_STREAMING_CLUSTER_ID)
            - name: NATS_URI
              valueFrom:
                configMapKeyRef:
                  key: natsUri
                  name: web-security-configs
            - name: MESSAGING_NATS_ADDR
              value: $(NATS_URI)
            - name: TOKEN_AUTH_PRIVATE_KEY
              valueFrom:
                secretKeyRef:
                  key: tokenAuthPrivateKey
                  name: web-security-secrets
            - name: TOKEN_PRIVATE_KEY
              value: $(TOKEN_AUTH_PRIVATE_KEY)
            - name: TOKEN_AUTH_PRIVATE_KEY_ID
              valueFrom:
                secretKeyRef:
                  key: tokenAuthPrivateKeyId
                  name: web-security-secrets
            - name: TOKEN_KID
              value: $(TOKEN_AUTH_PRIVATE_KEY_ID)
            - name: EDGE_AUTH_URI
              valueFrom:
                configMapKeyRef:
                  key: edgeAuthUri
                  name: web-security-configs
            - name: TOKEN_URI
              value: $(EDGE_AUTH_URI)/v1/internal-tokens
            - name: TERMINATION_GRACE_PERIOD
              value: "30"
            - name: LOG_LEVEL
              value: info
            - name: AUTH_ENABLED
              value: "true"
            - name: AUTH_JWT_AUD
              value: qlik.api.internal
            - name: AUTH_JWT_ISS
              value: qlik.api.internal
            - name: MESSAGING_ENABLED
              value: "true"
            - name: MESSAGING_AUTH_ENABLED
              value: "true"
          image: qliktech-docker.jfrog.io/web-security:1.7.0
          imagePullPolicy: null
          livenessProbe:
            httpGet:
              path: /live
              port: 6263
          name: main
          ports:
            - containerPort: 6263
          readinessProbe:
            httpGet:
              path: /ready
              port: 6263
          volumeMounts:
            - mountPath: /etc/config
              name: csp-volume
      dnsConfig:
        options:
          - name: timeout
            value: "1"
      imagePullSecrets:
        - name: artifactory-docker-secret
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            items:
              - key: csp
                path: csp
            name: csp-configmap
          name: csp-volume
---
