manifests/base/resources/web-security/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "6263"
    prometheus.io/scrape: "true"
  labels:
    app: web-security
    chart: web-security-1.4.17
    heritage: Helm
    release: web-security
  name: web-security
spec:
  ports:
  - name: web-security
    port: 6263
    protocol: TCP
    targetPort: 6263
  selector:
    app: web-security
    release: web-security
  type: ClusterIP
---
