manifests/base/resources/web-security/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://web-security-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/v1/(.*) /v1/$1 break;
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: web-security
    chart: web-security-1.4.17
    heritage: Helm
    release: web-security
  name: web-security
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: web-security
          servicePort: 6263
        path: /api/v1/csp-origins
      - backend:
          serviceName: web-security
          servicePort: 6263
        path: /api/v1/csp-header
---
